2004-09-04  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-mime-handlers.c: remove unused variables to
	  fix compilation

2004-09-04  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-mime-info-cache.c: make sure we don't free
	  memory we'll reuse later when managing the mime_info_cache_map 
	  hash table memory (fixes #150467)

2004-09-03  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_component): don't use
	the short list when selecting a componenent to 
	return.
	(gnome_vfs_mime_get_short_list_components): Prioritize
	exact matches higher than supertype matches.

2004-09-03  Ray Strode  <rstrode@redhat.com>

	Cleanup and leak fixes by Christophe Fergeau.

	* libgnomevfs/eggdesktopentries.c:
	(egg_desktop_entries_free): fix leak
	(egg_desktop_entries_parse_comment): use
	g_strndup instead of g_new/strncpy().
	(egg_desktop_entry_free),
	(egg_desktop_entries_remove_group_node): fix leak.

2004-09-03  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-ssl.c (handle_ssl_read_write):
	Fix build without openssl/gnutls. (Bug 151632)
	Patch from Morten Welinder.

2004-09-03  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* libgnomevfs/gnome-vfs-unix-mounts.c:
	Fix build on NetBSD. (#151677)
	Patch from Julio M. Merino Vidal

2004-09-02  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c (get_drive_name):
	Fix a small typo in fstab-sync patch

2004-09-02  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c (get_drive_name): 
	* modules/http-neon-method.c: (http_list_directory),
	(do_make_directory):
	Fix dav redirect handling issues.

2004-09-01  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c:
	Recognize the mountpoint names generated by fstab-sync from hal.

2004-08-30  Christian Kellner <gicmo@gnome-de.org>
