@@ -1,3 +1,8 @@
+2004-09-06  Alexander Larsson  <alexl@redhat.com>
+
+	* modules/ftp-method.c: (do_get_file_info), (do_read_directory):
+	Support symlinks.
+
 2004-09-04  Christophe Fergeau  <teuf@gnome.org>
 
 	* libgnomevfs/gnome-vfs-mime-handlers.c: remove unused variables to
